@startuml

title __MESSAGECENTER's Class Diagram__\n

  package  {
    package Model {
      package Model.MessageCenter {
        class ListMessageContent {
            - messageType : SimpleStringProperty
            - info : SimpleStringProperty
            + ListMessageContent()
            + getMessageType()
            + getInfo()
            + setMessageType()
            + setInfo()
            + messageTypeProperty()
            + infoProperty()
            + getMessage()
            + setMessage()
        }
      }
    }
  }
  

  package  {
    package Model {
      package Model.MessageCenter {
        class Message {
            - messageType : StringProperty
            - isSeller : boolean
            - sellerName : StringProperty
            - buyerName : StringProperty
            ~ Message()
            + getVacation()
            + getBuyerNameProperty()
            + getBuyerName()
            + getSellerNameProperty()
            + getSellerName()
            + isSeller()
            + getMessageTypeProperty()
            + getMessageType()
            + getRequest()
            + setRequest()
        }
      }
    }
  }
  

  package  {
    package Model {
      package Model.MessageCenter {
        class MessageModel {
            + MessageModel()
            + getUserName()
            + getVacationFromKey()
            + createMessageParametersForController()
            + setMessagesForUser()
            + resetMessagesBox()
            + getRequests()
            + getMessagesList()
            + getCurrentTimeStamp()
            - checkListForDueDateApproval()
            + checkIfApprovalDue()
        }
      }
    }
  }
  

  package  {
    package Model {
      package Model.MessageCenter {
        class MessagesBox {
            - messagesList : List<Message>
            ~ MessagesBox()
            + getMessagesList()
            + resetMessegeBox()
        }
      }
    }
  }
  

  ListMessageContent o-- Message : message
  Message o-- Vacation : vacation
  Message o-- Request : request
  MessageModel o-- RequestModel : requestModel
  MessageModel o-- UserModel : userModel
  MessageModel o-- VacationModel : vacationModel
  MessageModel o-- MessagesBox : messagesList


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
